--- a/lista.html
+++ b/lista.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MakeUp</title>
+    <title>Lista de los Contenidos</title>
 </head>
 <body>
-    
     
 </body>
 </html>
