--- a/lista.html
+++ b/lista.html
@@ -6,6 +6,21 @@
     <title>Lista de los Contenidos</title>
 </head>
 <body>
+    <table class="tabla">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Correo</th>
+                <th>Fecha de nacimiento</th>
+                <th>Genero</th>
+                <th>Maquillaje favorito</th>
+                <th>Opinión</th>
+                <th>Terminos y condiciones</th>
+            </tr>
+        </thead>
+        <tbody id="tbDatos"></tbody>
+    </table>
     
 </body>
 </html>
